# crabmap

./: .gitignore  AGENTS.md  AGENTS_zh.md  Cargo.toml  README.md  README_zh.md  build.rs
docs/plantree/: README.md
docs/plantree/baseline/: module-map.md  risk-hotspots.md  runtime-flows.md  storage-and-state.md  test-and-release-gates.md
docs/plantree/decisions/: opencode-subdirectory-support.md
docs/plantree/plans/health-optimization/: README.md  implementation-status.md  (+1 more)
skills/: crabmap.md  ferrimind.md
src/: ai.rs  analyzer.rs  cli.rs  config.rs  deps.rs  drift.rs  export.rs  gitintel.rs  health.rs  llm.rs  main.rs  mir.rs  model.rs  query.rs  rag.rs  repo_map.rs  report.rs  semantic.rs  store.rs  term.rs  test_impact.rs  web.rs
src/ai/: clusters.rs  entries.rs  guide.rs  index.rs  mod.rs  quality.rs
src/analyzer/: AGENTS.md  builder.rs  helpers.rs  index.rs  mod.rs  resolution.rs  types.rs  visitors.rs
src/query/: AGENTS.md  commands.rs  filter.rs  find.rs  index.rs  mod.rs  ranking.rs  refactor_order.rs  risk.rs  similar.rs  source.rs  tests.rs  traversal.rs
src/rag/: api.rs  embedding.rs  helpers.rs  lexical.rs  mod.rs  rerank.rs  types.rs
src/semantic/: enrichment.rs  helpers.rs  lsp_client.rs  mod.rs
src/web/: AGENTS.md  assets.rs  config.rs  helpers.rs  indexing.rs  mod.rs  server.rs  state.rs
tests/: cli.rs
web/: AGENTS.md  index.html
web/src/: api.js  core.js  details.js  graph-interact.js  graph-layout.js  graph-render.js  main.js  sidebar.js  toolbar.js  utils.js
web/styles/: base.css  components.css  graph.css  layout.css
(+4 files in other folders)
