[package]
name = "crabmap"
version = "0.3.0"
edition = "2024"
description = "Rust code satellite map — index, query, and navigate your entire codebase"
license = "MIT"
repository = "https://github.com/trtyr/crabmap"
homepage = "https://github.com/trtyr/crabmap"
documentation = "https://github.com/trtyr/crabmap"
readme = "README.md"
keywords = ["rust", "knowledge-graph", "static-analysis", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
cargo_metadata = "0.19.2"
clap = { version = "4.5.51", features = ["derive"] }
flate2 = "1.1"
ignore = "0.4.24"
indicatif = "0.17"
petgraph = "0.6.5"
quote = "1.0.41"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syn = { version = "2.0.108", features = ["full", "visit"] }
toml = "0.8.23"
url = "2.5.7"
tempfile = "3.23.0"

[dev-dependencies]
